[project]
name = "greeter"
version = "0.1.2"
description = ""
authors = [
    {name = "Ken Sato", email = "ksato9700@gmail.com"},
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "grpcio>=1.58.0",
    "protobuf>=4.24.3",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.0",
    "flake8>=6.1.0",
    "grpcio-tools>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
