[project]
name = "greeter"
version = "0.1.2"
description = ""
authors = [{ name = "Ken Sato", email = "ksato9700@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = ["grpcio==1.71.0", "protobuf>=5.29.4", "click>=8.2.0"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "grpcio-tools==1.71.0",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
