[project]
name = "greeter"
version = "0.1.2"
description = ""
authors = [{ name = "Ken Sato", email = "ksato9700@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = ["grpcio>=1.78.0", "protobuf>=6.33.0", "click>=8.2.0"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.4",
    "grpcio-tools>=1.78.0",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "greeter/helloworld",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

