[package]
name = "hello-grpc-tonic"
version = "0.1.1"
authors = ["Ken Sato <ksato9700@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "hello_grpc_tonic_lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.42", features = ["full"] }
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
