[package]
name = "hello-grpc"
version = "0.1.0"
authors = ["Ken Sato <ksato9700@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.3.5"
grpcio = "0.6.0"
protobuf = "~2"
apis = { git = "ssh://git@github.com/ksato9700/apis", rev = "887d89367cd597f10d6215eb7ca6e3431f3ba062" }
