[package]
authors = ["Ken Sato <ksato9700@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "hello-grpc"
version = "0.1.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.3"
grpcio = "0.12.1"
protobuf = "~2"

[build-dependencies]
protoc-grpcio = "2.0"
