[package]
name = "hello-grpc"
version = "0.1.0"
authors = ["Ken Sato <ksato9700@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
grpcio = "0.6.0"
protobuf = "~2"

[build-dependencies]
protoc-grpcio = "2.0.0"
